Fixed layout bugs. Updating homepage css file. Adding prev. & .sql

--- a/assets/css/homepage-style.css
+++ b/assets/css/homepage-style.css
@@ -22,12 +22,10 @@
 }
 
 html, body {
-  min-width: 100%;
-  min-height: 100%;
+  height: 100%;
+  width: 100%;
   padding: 0;
   margin: 0;
-  max-width: 100%;
-  max-height: 100%;
 }
 
 body {
@@ -56,16 +54,28 @@ header {
   display: none;
 }
 
+.cards-zone {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.line-white {
+  background: #ffffff;
+  height: 15px;
+  width: 100%;
+  border-bottom: 3px solid #FFC007;
+  border-radius: 3px;
+}
+
 main {
   flex: auto;
   background-color: #e9e9e9;
-  margin-top: -14px;
 }
 
 .sidebar {
   background-color: #fff;
   width: 300px;
-  height: 100vh;
+  height: 100%;
 }
 
 .capa {
